web/versioned_docs/version-0.24/api/@wasp.sh/spec/index.md
# @wasp.sh/spec

## Wasp Spec

- [App](interfaces/App.md)
- [app](functions/app.md)

## Constructors

- [action](functions/action.md)
- [api](functions/api.md)
- [apiNamespace](functions/apiNamespace.md)
- [crud](functions/crud.md)
- [job](functions/job.md)
- [page](functions/page.md)
- [query](functions/query.md)
- [route](functions/route.md)

## Specifications

- [Action](interfaces/Action.md)
- [Api](interfaces/Api.md)
- [ApiNamespace](interfaces/ApiNamespace.md)
- [Crud](interfaces/Crud.md)
- [Job](interfaces/Job.md)
- [Page](interfaces/Page.md)
- [Query](interfaces/Query.md)
- [Route](interfaces/Route.md)
- [Spec](type-aliases/Spec.md)
- [SpecElement](type-aliases/SpecElement.md)

## Fields

- [Auth](interfaces/Auth.md)
- [Client](interfaces/Client.md)
- [CrudOperationOptions](interfaces/CrudOperationOptions.md)
- [CrudOperations](interfaces/CrudOperations.md)
- [Db](interfaces/Db.md)
- [EmailAuthConfig](interfaces/EmailAuthConfig.md)
- [EmailFlowConfig](interfaces/EmailFlowConfig.md)
- [EmailFromField](interfaces/EmailFromField.md)
- [EmailSender](interfaces/EmailSender.md)
- [ExecutorOptions](interfaces/ExecutorOptions.md)
- [ExternalAuthMethods](interfaces/ExternalAuthMethods.md)
- [LocalAuthMethods](interfaces/LocalAuthMethods.md)
- [Schedule](interfaces/Schedule.md)
- [Server](interfaces/Server.md)
- [SocialAuthConfig](interfaces/SocialAuthConfig.md)
- [UsernameAndPasswordConfig](interfaces/UsernameAndPasswordConfig.md)
- [Wasp](interfaces/Wasp.md)
- [WebSocket](interfaces/WebSocket.md)
- [AuthMethods](type-aliases/AuthMethods.md)
- [EmailSenderProviderName](type-aliases/EmailSenderProviderName.md)
- [EntityName](type-aliases/EntityName.md)
- [HttpMethod](type-aliases/HttpMethod.md)
- [JobExecutor](type-aliases/JobExecutor.md)

## References

- [DefaultRefObjectDescriptor](interfaces/DefaultRefObjectDescriptor.md)
- [NamedRefObjectDescriptor](interfaces/NamedRefObjectDescriptor.md)
- [Reference](type-aliases/Reference.md)
- [RefObject](type-aliases/RefObject.md)
- [RefObjectDescriptor](type-aliases/RefObjectDescriptor.md)
- [ZodSchema](type-aliases/ZodSchema.md)
- [ref](functions/ref.md)
